test_suite5/ALAN/test_suite/alan-2022-examples/failing/005810_mutation.alan
source p begin leave 47 := = 71 end
